# notificate

./: .travis.yml  Cargo.toml  README.md
cmd/daemon/: Cargo.toml  README.md
cmd/monitor/: Cargo.toml  README.md
cmd/send/: Cargo.toml  README.md
core/: .gitignore  Cargo.toml
notify-client/: Cargo.toml
notify-monitor/: Cargo.toml
notify-server/: Cargo.toml
sqs/: Cargo.toml
sqs/src/: lib.rs
