[package]
name = "notificate-daemon"
version = "0.1.0"
authors = ["arcnmx"]

description = "Notificate libnotify server"
keywords = []

documentation = "https://github.com/arcnmx/notificate/blob/master/cmd/daemon/README.md"
repository = "https://github.com/arcnmx/notificate"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "arcnmx/notificate" }
maintenance = { status = "passively-maintained" }

[dependencies]
clap = { version = "2.31.2", default-features = false }
notificate-core = { version = "^0.1.0", path = "../../core" }
notificate-notify-server = { version = "^0.1.0", path = "../../notify-server" }
notificate-sqs = { version = "^0.1.0", path = "../../sqs", optional = true }

[features]
backend-sqs = ["notificate-sqs"]
default = ["backend-sqs"]
